<resources>
    <string name="app_name">InClassApp</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="sex">性别</string>
    <string name="java">java</string>
    <string name="python">python</string>
    <string name="math">高等数学</string>
    <string name="submit">提交</string>
    <string name="bmi">BMI 计算器</string>
    <string name="input_weight">input weight</string>
    <string name="input_height">input height</string>
    <string name="next">NEXT</string>
    <string name="trueT">TRUE</string>
    <string name="falseF">FALSE</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="clear_height">clear height</string>
    <string name="clear_weight">clear weight</string>
    <string name="cheat">CHEAT !</string>
    <string name="sure">Are you sure you want to do this?</string>
    <string name="show_answer">SHOW ANSWER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">面板</string>
    <string name="title_notification">通知</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <string name="menu_home">主页</string>
    <string name="menu_gallery">画廊</string>
    <string name="menu_slideshow">幻灯</string>
    <string name="option">选项</string>


    <string-array name="student_arr">
        <item>软件2118</item>
        <item>软件2128</item>
        <item>软件2136</item>
        <item>软件2116</item>
    </string-array>
</resources>