<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Question3_31Activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/questionTextView"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnTrue"
            android:text="@string/trueT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnFalse"
            android:text="@string/falseF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnCheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat"/>

    <Button
        android:id="@+id/btnNext"
        android:text="@string/next"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>